--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.graphql.graphiql.enabled=true
 spring.application.name=EgaFinance
+
+# Connexion SQL Server - CORRIGÉ
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=EgaFinanceDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
